exemplo de chunk

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.jdbc-url=jdbc:sqlserver://localhost:1433/spring-batch
+spring.datasource.jdbc-url=jdbc:sqlserver://localhost:1433;database=spring-batch;trustServerCertificate=true
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.batch.jdbc.initialize-schema=always
+
